--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "private": true,
   "devDependencies": {
     "@aws-cdk/assert": "^1.90.1",
+    "@aws-cdk/aws-events": "^1.90.1",
+    "@aws-cdk/aws-events-targets": "^1.91.0",
     "@aws-cdk/aws-iam": "^1.90.1",
     "@aws-cdk/aws-lambda": "^1.90.1",
     "@aws-cdk/aws-lambda-nodejs": "^1.90.1",
