--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@aws-cdk/aws-lambda": "^1.90.1",
     "@aws-cdk/aws-lambda-nodejs": "^1.90.1",
     "@aws-cdk/core": "^1.90.1",
+    "@mrllama123/cdk-common-config": "1.0.5",
     "@types/jest": "^26.0.14",
     "aws-cdk": "^1.90.1",
     "aws-sdk": "^2.761.0",
+    "esbuild": "0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest-formatting": "^2.0.0",
